Prevent author name wrapping in sidebar

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -136,12 +136,13 @@
 
 .sidebar .author__name {
   @include breakpoint($medium) {
-    font-size: $type-size-3;
+    font-size: $type-size-4;
   }
   font-family: $sans-serif;
   font-size: $type-size-4;
   font-weight: 700;
   color: $primary-color;
+  white-space: nowrap;
 }
 
 .author__bio {
